# FoundationTrail

./: .gitignore  README.md  ]  aodoo.py  aodoo.spec  odooCreationTool.py  pyproject.toml  testAodoo.py
aodoo/: __init__.py  __main__.py  testArgumentParser.py
aodoo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
aodoo/operationHandlers/: generate_model_handler.py  generate_module_handler.py  generate_security_handler.py  generate_view_handler.py
foundationTrail/: __init__.py  __main__.py
foundationTrail/operationHandlers/: __init__.py  generate_interactive_handler.py  generate_model_handler.py  generate_module_handler.py  generate_security_handler.py  generate_view_handler.py  send_help.py
my_test_module/: __manifest__.py
my_test_module/models/: __init__.py  my_test_module.py
my_test_module/views/: my_test_view.xml
operationHandlers/: __init__.py  generate_model_handler.py  generate_module_handler.py  generate_view_handler.py  send_help.py
pincoPallo/: __manifest__.py
pincoPallo/models/: __init__.py
pincoPallo/views/: my_view.xml
